-Wreturn-type warning in DFGObjectAllocationSinkingPhase.cpp https://bugs.webkit.org/show_bug.cgi?id=182389

Reviewed by Yusuke Suzuki.

Fix the warning.

As a bonus, remove a couple unreachable breaks for good measure.

* dfg/DFGObjectAllocationSinkingPhase.cpp:


Canonical link: https://commits.webkit.org/198190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227970 268f45cc-cd09-0410-ab3c-d52691b4dbfc